# GaussQuad

./: #ref.bib#  .#ref.bib  CMakeLists.txt  README.md
GaussQuad/: All  Core  Polynomial
GaussQuad/src/: Jacobi.h  OrthogonalPolynomial.h  Quadrature.h
examples/: #CMakeLists.txt#  CMakeLists.txt  QuadExample.cpp  SpectraExample.cpp
include/: CMakeLists.txt  GaussQuad.h
include/src/: OrthogonalPolynomial.h  Quadrature.h
src/: CMakeLists.txt
test/: CMakeLists.txt  Tests.cpp
tests/: CMakeLists.txt  Tests.cpp
